salesforce/deploy/force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Under $10K</fullName><default>false</default><label>Under $10K</label></value>
            <value><fullName>$10K-$50K</fullName><default>false</default><label>$10K-$50K</label></value>
            <value><fullName>$50K-$100K</fullName><default>false</default><label>$50K-$100K</label></value>
            <value><fullName>$100K+</fullName><default>false</default><label>$100K+</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>