salesforce/deploy/force-app/main/default/objects/Lead/fields/Chat_Transcript_ID__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_ID__c</fullName>
    <label>Chat Transcript ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>