salesforce/deploy/force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>Lead Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>AI-computed qualification score (0-100)</description>
</CustomField>