salesforce/deploy/force-app/main/default/objects/Lead/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>