salesforce/deploy/force-app/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Immediate</fullName><default>false</default><label>Immediate</label></value>
            <value><fullName>1-3 months</fullName><default>false</default><label>1-3 months</label></value>
            <value><fullName>3-6 months</fullName><default>false</default><label>3-6 months</label></value>
            <value><fullName>6+ months</fullName><default>false</default><label>6+ months</label></value>
            <value><fullName>Just exploring</fullName><default>false</default><label>Just exploring</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>